# modantic

./: .flake8  LICENSE  README.md  pyproject.toml
