[tool.poetry]
name = "modantic"
version = "0.1.0"
description = ""
authors = ["Ajamal Khan <13559558+khan-ajamal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.3"
pydantic = "^2.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"
pyright = "^1.1.358"
flake8-bugbear = "^24.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.12"
